--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -5,7 +5,6 @@
   justify-content: center;
   text-align: center;
   padding: 20px;
-  scroll-margin-top: 85px;
 }
 
 .hero__card {
@@ -65,6 +64,14 @@
   .hero {
     text-align: center;
     justify-content: center;
+  }
+
+  .hero__image img {
+    width: 110px;
+    height: 230px;
+    object-fit: cover;
+    border-radius: 16px;
+    box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
   }
 
   .hero__title {
