--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,13 @@
-@use "./layout/navbar";
+@use './layout/navbar';
 
 :root {
-    font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
-
 
 html {
   scroll-behavior: smooth;
+}
+
+section {
+  scroll-margin-top: 64px;
 }
